solve img related issue fs on small screen and other minor chngs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,8 +355,8 @@
 
 .study-img-2 {
   width: 480px;
-  object-fit: cover;
   max-height: 320px;
+  object-fit: cover;
 }
 
 .gap_100 {
@@ -440,14 +440,12 @@
     width: 387px;
     max-height: 258px;
     border-radius: 40px;
-    object-fit: cover;
   }
 
   .study-img-2 {
     width: 387px;
     max-height: 258px;
     border-radius: 40px;
-    object-fit: cover;
   }
 }
 
@@ -455,6 +453,7 @@
   .mt_263 {
     margin-top: 200px;
   }
+
   .blur-position {
     top: 142px;
     right: 35px;
@@ -571,14 +570,29 @@
 }
 
 @media (max-width: 575.98px) {
+  .study {
+    padding-top: 60px;
+    padding-bottom: 100px;
+  }
+
+  .max_w_350 {
+    max-width: 306px;
+  }
+
+  .max_w_360 {
+    max-width: 305px;
+  }
+
   .slick-slide {
     opacity: 0 !important;
     transition: all 600ms ease-in-out !important;
   }
+
   .slick-current {
     opacity: 1 !important;
     transition: all 600ms ease-in-out !important;
   }
+
   .fw_normal_mobile {
     font-weight: 400 !important;
   }
@@ -587,25 +601,24 @@
     font-size: 12px;
   }
 
-  .footer_text_size {
-    font-size: 12px;
-  }
-
   .study-img {
     transform: translateX(80px) !important;
-    border-radius: 40px;
     width: 411px !important;
-    object-fit: cover;
+  }
+
+  .study-img-2 {
+    transform: translateX(-92px);
   }
 
   .image_zoom_hover {
     border-radius: 0px !important;
   }
 
-  .image_zoom_hover:hover img {
+  /* .image_zoom_hover:hover img {
     transform: unset !important;
-  }
-  */ .rating_icon {
+  } */
+
+  .rating_icon {
     width: 55px;
     height: 20px;
   }
@@ -677,17 +690,12 @@
   }
 
   .image_zoom_hover .study-img {
-    transform: translateX(60px) !important;
-    border-radius: 40px;
-    width: 330 !important;
-    object-fit: cover;
+    transform: translateX(45px) !important;
   }
 
   .image_zoom_hover .study-img-2 {
-    transform: translateX(-60px);
-    border-radius: 40px;
+    transform: translateX(-32px);
     max-height: 270px !important;
-    object-fit: cover !important;
   }
 }
 
@@ -895,12 +903,14 @@
   padding: 64px 52px;
 }
 
-.max_w_546 {
-  max-width: 546px;
+.max_w_572 {
+  max-width: 572px;
 }
+
 .scale_12 {
   scale: 1.2;
 }
+
 /* BLUR CARDS CSS CODE HERE============================================= */
 .blur_box_bg {
   background-color: rgba(222, 222, 222, 0.5);
@@ -1080,6 +1090,7 @@
     padding: 17px 20px;
     border-radius: 27px;
   }
+
   .cash_flow_box h2 {
     font-size: 12px !important;
     margin-bottom: 12px;
@@ -1221,8 +1232,8 @@
   opacity: 100%;
 } */
 
-.slick-current ~ div,
-.slide_add ~ div {
+.slick-current~div,
+.slide_add~div {
   border-radius: 40px;
 }
 
@@ -1350,7 +1361,7 @@
   .seller_women {
     width: 417px;
     height: 278px;
-    transform: translatex(-15%);
+    transform: translateX(-18%);
   }
 
   .facebook_icon {
@@ -1411,6 +1422,7 @@
     justify-content: flex-end;
     align-items: center;
   }
+
   .image_zoom_hover {
     border-radius: 40px;
   }
@@ -1423,8 +1435,8 @@
     margin-bottom: 48px !important;
   }
 
-  .slick-current > div .slider_content,
-  .slide_add > div .slider_content {
+  .slick-current>div .slider_content,
+  .slide_add>div .slider_content {
     padding: 40px !important;
     z-index: 2;
     max-width: 600px !important;
@@ -1465,65 +1477,39 @@
     justify-content: flex-start !important;
   }
 
-  #community .slick-track .slick-active + .slick-active {
+  #community .slick-track .slick-active+.slick-active {
     transform: scale(0.7) translateX(-6%);
     z-index: 8;
     position: relative;
   }
 
-  #community .slick-track .slick-active + .slick-active + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active {
     transform: scale(1);
     z-index: 10;
     position: relative;
     display: block;
   }
 
-  #community
-    .slick-track
-    .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active+.slick-active {
     transform: scale(1) translateX(6%);
     z-index: 8;
     position: relative;
   }
 
-  #community
-    .slick-track
-    .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active+.slick-active+.slick-active {
     transform: scale(0.8);
     z-index: 6;
     position: relative;
     display: flex;
   }
 
-  #community
-    .slick-track
-    .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active+.slick-active+.slick-active+.slick-active {
     transform: scale(0.8);
     z-index: 6;
     position: relative;
   }
 
-  #community
-    .slick-track
-    .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active+.slick-active+.slick-active+.slick-active+.slick-active {
     transform: scale(0.7);
     z-index: 6;
     position: relative;
@@ -1531,12 +1517,13 @@
 }
 
 @media (min-width: 992px) {
-  #community .slick-track .slick-active + .slick-active {
+  #community .slick-track .slick-active+.slick-active {
     transform: scale(1) translateX(-6%);
     z-index: 8;
     position: relative;
   }
 }
+
 @media (min-width: 1200px) {
   .slider_bttns {
     bottom: -20px;
@@ -1556,7 +1543,7 @@
     margin-bottom: 48px !important;
   }
 
-  .slick-current > div .slider_content,
+  .slick-current>div .slider_content,
   .slide_add .slider_content {
     padding: 40px !important;
     z-index: 2;
@@ -1574,8 +1561,8 @@
     min-width: 655px;
   }
 
-  .slick-current > div .slider_content,
-  .slide_add > div .slider_content {
+  .slick-current>div .slider_content,
+  .slide_add>div .slider_content {
     padding: 40px !important;
     z-index: 2;
     max-width: 600px !important;
@@ -1589,65 +1576,39 @@
     justify-content: flex-start !important;
   }
 
-  #community .slick-track .slick-active + .slick-active {
+  #community .slick-track .slick-active+.slick-active {
     transform: scale(1) translateX(-6%);
     z-index: 8;
     position: relative;
   }
 
-  #community .slick-track .slick-active + .slick-active + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active {
     transform: scale(1);
     z-index: 10;
     position: relative;
     display: block;
   }
 
-  #community
-    .slick-track
-    .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active+.slick-active {
     transform: scale(1) translateX(6%);
     z-index: 8;
     position: relative;
   }
 
-  #community
-    .slick-track
-    .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active+.slick-active+.slick-active {
     transform: scale(0.8);
     z-index: 6;
     position: relative;
     display: flex;
   }
 
-  #community
-    .slick-track
-    .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active+.slick-active+.slick-active+.slick-active {
     transform: scale(0.8);
     z-index: 6;
     position: relative;
   }
 
-  #community
-    .slick-track
-    .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active
-    + .slick-active {
+  #community .slick-track .slick-active+.slick-active+.slick-active+.slick-active+.slick-active+.slick-active+.slick-active {
     transform: scale(0.7);
     z-index: 6;
     position: relative;
